fix: update CORS configuration to include additional allowed origins